
Thu Apr  6 01:17:06 CEST 2000
(Saur)

Ran the default indent from ecvs on all files to get rid of differences
caused by it (should hopefully give smaller diffs in the future).
Removed all duplicated * * in comments (generated by indent sometimes).

-------------------------------------------------------------------------------

Thu Apr  6 01:39:50 CEST 2000
(Saur)

Removed memory leaks from the dialog displaying a list of remembered
windows, and fixed so E does not crash if you press escape in it.

-------------------------------------------------------------------------------

Wed Apr  5 16:55:39 PDT 2000
(Mandrake)

a little bit of fixing to the xinerama menu code

-------------------------------------------------------------------------------

Thu Apr  6 03:45:54 CEST 2000
(Saur)

Revenge of the config dialog headers!

There is now a new dialog for miscellaneous options (did not
have much choice as there was no suitable dialog fit for the
purpose), which currently only contains one option:
the possibility to turn on dialog headers again.

If anyone feels up to it, the following dialog images are
missing (as I cannot draw  anything worth looking at):
group.png, iconbox.png, kde.png and miscellaneous.png.

-------------------------------------------------------------------------------

Thu Apr  6 04:29:03 CEST 2000
(Saur)

Added localization of some more messages.

-------------------------------------------------------------------------------

Fri Apr  7 11:44:00 GMT 2000
(gilbertt)

Tasklist/desktop menu window raising fix requested by lee@brave.com.


-------------------------------------------------------------------------------

Mon Apr 10 12:45:00 PDT 2000
(Mandrake)

redid all the xinerama menu code

-------------------------------------------------------------------------------

Mon Apr 10 15:01:10 PDT 2000
(Mandrake)

fixed the rest of xinerama menu usage (please test under non-xinerama)